@@ -117,9 +117,12 @@ the terms of any one of the MPL, the GPL or the LGPL.
            <!-- other keys are handled inside vimperator.js event loop -->
         </keyset>
 
+        <!--
         <popupset id="vimperator-popupset">
             <popup id="vimperator-visualbell"/>
         </popupset>
+        -->
+        <panel id="vimperator-visualbell"/>
 
     </window>
 </overlay>
